hphp/hack/test/typecheck/reactive/rx_append1.php.exp
File "rx_append1.php", line 4, characters 3-10:
Appending to a Hack Collection object requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "rx_append1.php", line 3, characters 27-28:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
