hphp/hack/test/typecheck/reactive/rx_append1.php
<?hh
<<__Rx>>
function a(Vector<int> $a)[]: void {
  $a[] = 1;
}
